--- a/style1.css
+++ b/style1.css
@@ -8,9 +8,9 @@
     --purple: #775FC7;
     --red: #c54955;
     --orange: #E49F49;
-    --black: #555555;
+    --black: #414141;
     --grey: #E7E7E7;
-    --grey3: #eeeeee;
+    --grey3: #f3f3f3;
     --grey2: #9b9b9b;
     --aqua: #3AB0AB;
 }
