--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
     box-shadow: none !important;
 }
 
+.ss {
+    text-shadow: none !important;
+}
+
 .ws {
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3) !important;
 }
