--- a/styles_login1.css
+++ b/styles_login1.css
@@ -45,6 +45,7 @@ input[type='password'] {
     outline: none;
     box-shadow: none
 }
+/*
 img {
     width: 40px;
     height: 40px;
@@ -52,6 +53,7 @@ img {
     border-radius: 50%;
     position: relative
 }
+*/
 .bordert {
     border-top: 1px solid #aaa;
     position: relative
