--- a/style.css
+++ b/style.css
@@ -110,6 +110,22 @@ a::-moz-selection {
     color: var(--white);
 }
 
+#frame
+{
+    border: solid 3px var(--grey) !important;
+    border-radius: 1em !important;
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+}
+
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+
 .fondo1 {
     background-size: cover;
     background-size: 100% 100%;
